# cmake_minimum_required(VERSION <specify CMake version here>)
project(experiment C)

set(CMAKE_C_STANDARD 99)

add_executable(8.1 8.1.c)
add_executable(8.2.1 8.2.1.c)
add_executable(8.2.2 8.2.2.c)
add_executable(8.3.1 8.3.1.c)
add_executable(8.3.2 8.3.2.c)
add_executable(8.3.4 8.3.4.c)
add_executable(try try.c)